--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "config": " node welcome.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.17.1"
+  },
   "devDependencies": {},
   "eslintConfig": {
     "root": true,
