--- a/package.json
+++ b/package.json
@@ -2,13 +2,39 @@
   "name": "genesis-ui",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
   "scripts": {
-    "config": " node welcome.js"
+    "dev": "webpack-dev-server --inline --hot --env.dev & node server/welcome.js",
+    "build": "rimraf dist && webpack -p --progress --hide-modules"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "axios": "^0.19.2",
+    "babel-eslint": "^10.1.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "element-ui": "^2.3.4",
+    "express": "^4.17.1",
+    "lodash": "^4.17.19",
+    "vue": "^2.5.16",
+    "vue-router": "^2.8.1",
+    "vuex": "^3.5.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "autoprefixer": "^6.6.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.0",
+    "babel-preset-vue-app": "^1.2.0",
+    "css-loader": "^0.27.0",
+    "file-loader": "^0.10.1",
+    "html-webpack-plugin": "^2.24.1",
+    "postcss-loader": "^1.3.3",
+    "rimraf": "^2.5.4",
+    "style-loader": "^0.13.2",
+    "url-loader": "^0.5.8",
+    "vue-loader": "^13.3.0",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.2"
+  },
   "eslintConfig": {
     "root": true,
     "env": {
